<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/transparent_purple"
    android:id="@+id/closeGuideLayout"
    android:padding="20sp"
    android:clickable="true"
    android:focusable="true"
    android:visibility="gone"
    >
>

    <TextView
        android:id="@+id/titleCloseGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_guide_title"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_marginBottom="5sp"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/subtitleCloseGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_guide_subtitle"
        style="@style/TextStyle"
        android:gravity="center"
        />


    <TextView
        android:id="@+id/text1Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_guide_text1"
        style="@style/TextStyle"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/text2Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_guide_text2"
        style="@style/TextStyle"
        />

        <TextView
            android:id="@+id/text3Welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close_guide_text3"
            style="@style/TextStyle"
            />


        <Button
            android:id="@+id/exitGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close_guide_button"
            style="@style/ButtonStyle"
            />

</LinearLayout>