<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical"
    android:id="@+id/characterGuideLayout"
    android:clickable="true"
    android:focusable="true"
    android:visibility="gone">

    <Button
        android:id="@+id/exit_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_guide_button"
        android:background="@android:color/transparent"
        style="@style/ExitGuideButtonStyle"
        android:layout_margin="16dp"
        android:layout_gravity="end|top"/>

    <ImageView
        android:id="@+id/bubble"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/bubble"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/textStep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bubble_collectibles"
        android:gravity="center"
        android:maxLines="5"
        android:padding="20dp"
        android:textSize="26sp"
        android:textColor="@color/white"
        android:alpha="0" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_button"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>


</LinearLayout>