<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:clickable="true"
    android:focusable="true"
    android:visibility="gone"
    android:id="@+id/aboutUsGuideLayout"
    >

    <ImageView
        android:id="@+id/bubble"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="-30dp"
        android:layout_marginEnd="-30dp"
        android:src="@drawable/bubble"
        android:layout_gravity="end|top"
        android:alpha="0.5"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/textStep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bubble_about_us"
            android:gravity="center_horizontal"
            style="@style/BubbleGuideStyle"
            />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_button"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/exit_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_guide_button"
        android:background="@android:color/transparent"
        style="@style/ExitGuideButtonStyle"
        />
</FrameLayout>